상세페이지 초초초기 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity android:name=".AddArticleActivity">
         </activity>
 
+        <activity
+            android:name=".DetailArticleActivity">
+        </activity>
+
     </application>
 
 </manifest>
