수정하기 페이지 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".AddArticleActivity">
         </activity>
 
+        <activity android:name=".EditArticleActivity">
+        </activity>
+
         <activity
             android:name=".DetailArticleActivity">
         </activity>
