--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileProject"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,6 +27,15 @@
         <activity android:name=".AddArticleActivity">
         </activity>
 
+        <activity android:name=".ChatRoomActivity">
+        </activity>
+
+        <activity android:name=".EditArticleActivity">
+        </activity>
+
+        <activity
+            android:name=".DetailArticleActivity">
+        </activity>
     </application>
 
 </manifest>
