메세지 전송시 상대방에게도 메세지 데이터 생성 및 오류 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <activity
             android:name=".DetailArticleActivity">
         </activity>
+
+        <activity
+            android:name=".BeforeLoginActivity">
+        </activity>
     </application>
 
 </manifest>
